# elparadisogonzalo

./: .dockerignore  .gitignore  .gitmodules  .npmrc  Dockerfile  Koa.yml  MANIFEST.in  README.md  SECURITY.md  capacitor.config.json  elparadisogonzalo  index.html  index.js  index.json  package-lock.json  package.json  pom.xml  pyproject.toml
.devcontainer/: devcontainer.json
.elparadisogonzalo/: my-models.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: YAML  android.yml  android.yml:  docker-publish.yml  docker.yml  elparadisogonzalo.yml  github-pages.yml  ios.yml  jekyll-gh-pages.yml  koagonzalo1.yaml  koagonzalo11.YAML  maven-publish.yml  my-models.yml  my-models.yml.txt  npm-publish.yml  npm.yml  python-publish.yml  python.yml  self-hosted.yml
elparadisogonzalo-release-aab/: app-release.aab
elparadisogonzalo-release-apk/: app-release.apk
frontend/: capacitor.config.json  package-lock.json  package.json
frontend/android/: keystore.base64  keystore.properties
frontend/android/app/: build.gradle  keystore-base64.txt
frontend/android/app/src/main/java/com/genyoungclip/elparadisogonzalo/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.jsx
scripts/: build_frontend.py
src/elparadisogonzalo/: server.py
src/elparadisogonzalo.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
