[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elparadisogonzalo"
version = "1.0.1"
description = "Elparadisogonzalo full-stack Python package"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "genyoungclip", email = "genyoungclip@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
]

[project.urls]
Homepage = "https://github.com/genyoungclip/elparadisogonzalo"
Repository = "https://github.com/genyoungclip/elparadisogonzalo"
Issues = "https://github.com/genyoungclip/elparadisogonzalo/issues"

[project.scripts]
elparadisogonzalo = "elparadisogonzalo.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
elparadisogonzalo = ["static/**/*"]
